finish list page and modal

--- a/src/components/CustomTable/CustomTable.scss
+++ b/src/components/CustomTable/CustomTable.scss
@@ -1,6 +1,14 @@
+@mixin phone {
+  @media (max-width: 599px) {
+    @content;
+  }
+}
+
 .customTable {
   display: flex;
-  // height: 500px;
+  height: 100vh;
+  min-width: 785px;
+  width: 100vw;
   flex-direction: column;
   box-shadow: -15px 27px 69px rgba(0, 0, 0, 0.3);
   background-color: transparent;
@@ -9,11 +17,18 @@
   background-position-y: 0;
   background-size: 250%;
   border-radius: 10px;
+  overflow-x: scroll;
 
   &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem;
     &Search {
-      padding: 2rem;
+      flex: 1;
       &Input {
+        border-radius: 10px;
+        border-width: 2px;
         max-width: 20rem;
         border-color: rgba($color: #fff, $alpha: 0.6);
         &,
@@ -29,6 +44,13 @@
         &::placeholder {
           color: #fff;
         }
+      }
+    }
+    &Create {
+      flex: 1;
+      display: flex;
+      &Btn {
+        margin-left: auto;
       }
     }
   }
@@ -47,6 +69,9 @@
       tbody {
         tr {
           cursor: pointer;
+          &.customTable__bodyTableRow-placeholder {
+            cursor: initial;
+          }
           &:nth-of-type(odd) > * {
             background-color: rgba(255, 255, 255, 0.15);
           }
@@ -61,7 +86,7 @@
           &-glow {
             // display: table-cell;
 
-            height: 40px !important;
+            height: 24px !important;
           }
         }
       }
@@ -70,9 +95,36 @@
 
   &__footer {
     display: flex;
-    padding: 1rem 3rem 0;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 1rem 3rem;
+
+    &Rows {
+      display: flex;
+      align-items: center;
+      select {
+        width: 4.5rem;
+        height: 40px;
+        background-color: transparent;
+        color: #fff;
+        border: 2px solid #fff;
+        border-radius: 10px;
+        box-shadow: none !important;
+
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+
+        &:focus {
+          border-color: #fff;
+        }
+      }
+      p {
+        margin: 0 0.5rem;
+        color: #fff;
+      }
+    }
     .pagination {
-      margin-left: auto;
+      margin-bottom: 0;
       li {
         width: 55px;
         display: grid;
