--- a/src/styles/Customers.scss
+++ b/src/styles/Customers.scss
@@ -1,7 +1,9 @@
 .customers {
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // min-height: 100vh;
+
   &__content {
-    max-width: 1100px;
-    padding: 2rem;
-    height: 500px;
   }
 }
